[package]
name = "playasia"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.17.0"
chrono = "0.4.39"
jsonwebtoken = "9.3.1"
once_cell = "1.20.3"
poem = "3.1.6"
serde_json = "1.0.68"
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread"]}

